USER CONFIG DETAIL ADDED
USER CONFIG DETAIL ADDED

--- a/src/app/_component/auth/login/login.component.html
+++ b/src/app/_component/auth/login/login.component.html
@@ -1,6 +1,12 @@
 <div class="login-form">
-    <form [formGroup]="loginForm"
-        (ngSubmit)="onSubmit()"
+    <div style="border-radius: 0 0 calc(0.25rem - 1px) calc(0.25rem - 1px);
+        padding-top: 1rem!important;padding-bottom: 1rem!important;border-width: 0!important;
+        padding: 0.5rem 1rem;background-color: #d4d4d4d4;">
+        <div class="text-center">
+            ETL 2023            
+        </div>
+    </div>
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()"
         style="padding-bottom: 0px;">
         <h2 class="text-center">Log in</h2>
         <hr>
@@ -38,5 +44,5 @@
         <div class="text-center">
             <a routerLink="/forgotpass">Forgot Password?</a>
         </div>
-    </div>    
+    </div>
 </div>
