--- a/src/app/_component/auth/reset-pass/reset-pass.component.html
+++ b/src/app/_component/auth/reset-pass/reset-pass.component.html
@@ -1,5 +1,6 @@
 <div class="login-form">
-    <form [formGroup]="resetPassForm" (ngSubmit)="onSubmit()" style="padding-bottom: 0px;">
+    <form [formGroup]="resetPassForm" 
+        (ngSubmit)="onSubmit()" style="padding-bottom: 0px;">
         <h3 class="text-center">Reset Passwrod</h3>
         <hr>
         <div class="form-group">
