--- a/src/app/_component/auth/forgot-pass/forgot-pass.component.html
+++ b/src/app/_component/auth/forgot-pass/forgot-pass.component.html
@@ -1,4 +1,11 @@
 <div class="login-form">
+    <div style="border-radius: 0 0 calc(0.25rem - 1px) calc(0.25rem - 1px);
+        padding-top: 1rem!important;padding-bottom: 1rem!important;border-width: 0!important;
+        padding: 0.5rem 1rem;background-color: #d4d4d4d4;">
+        <div class="text-center">
+            ETL 2023
+        </div>
+    </div>
     <form [formGroup]="forgotForm" (ngSubmit)="onSubmit()" style="padding-bottom: 0px;">
         <h3 class="text-center">Forgot Passwrod</h3>
         <hr>
