--- a/src/app/_component/stt-setting/stt/stt-list/stt-list.component.html
+++ b/src/app/_component/stt-setting/stt/stt-list/stt-list.component.html
@@ -113,7 +113,8 @@
     <tfoot>
         <tr>
             <td colspan="13" style="text-align: center;padding-bottom: 0px;">
-                <jw-pagination [items]="sttList" [pageSize]="25" (changePage)="onChangePage($event)"></jw-pagination>
+                <jw-pagination [items]="sttList" [pageSize]="10" 
+                    (changePage)="onChangePage($event)"></jw-pagination>
             </td>
         </tr>
     </tfoot>
