Dynamic Form Added
Dynamic Form Added

--- a/src/app/_component/stt-setting/sttc/sttc-list/sttc-list.component.html
+++ b/src/app/_component/stt-setting/sttc/sttc-list/sttc-list.component.html
@@ -39,8 +39,8 @@
             <th>-</th>
             <th style="width: 4%;"># No</th>
             <th>Control Name</th>
-            <th>Filed Name</th>
-            <th>Filed Type</th>
+            <th>field Name</th>
+            <th>field Type</th>
             <th>Required</th>
             <th>Default</th>
             <th>Created Date</th>
@@ -66,10 +66,10 @@
                 {{sttControl.sttcName}}
             </td>
             <td style="text-align: center;">
-                {{sttControl.filedName}}
+                {{sttControl.fieldName}}
             </td>
             <td style="text-align: center;">
-                {{sttControl.filedType?.description | uppercase}}
+                {{sttControl.fieldType?.description | uppercase}}
             </td>
             <td style="text-align: center;">
                 {{sttControl.mandatory?.description}}
