--- a/src/app/_component/stt-setting/stts/stts-link-sttc/stts-link-sttc.component.html
+++ b/src/app/_component/stt-setting/stts/stts-link-sttc/stts-link-sttc.component.html
@@ -33,8 +33,8 @@
             <th>Sttc Id</th>
             <th>Sttc Order</th>
             <th>Sttc Name</th>
-            <th>Sttc FiledName</th>
-            <th>Sttc FiledType</th>
+            <th>Sttc fieldName</th>
+            <th>Sttc fieldType</th>
             <th>Sttc Required</th>
             <th>Sttc Default</th>
             <th>Created Date</th>
@@ -65,10 +65,10 @@
                 {{sttsLinkSTTC.sttcName}}
             </td>
             <td style="text-align: center;">
-                {{sttsLinkSTTC.filedName}}
+                {{sttsLinkSTTC.fieldName}}
             </td>
             <td style="text-align: center;">
-                {{sttsLinkSTTC.filedType?.description | uppercase}}
+                {{sttsLinkSTTC.fieldType?.description | uppercase}}
             </td>
             <td style="text-align: center;">
                 {{sttsLinkSTTC.mandatory?.description}}
