--- a/src/app/_component/stt-setting/stt-setting.component.html
+++ b/src/app/_component/stt-setting/stt-setting.component.html
@@ -79,7 +79,7 @@
                                             {{taskType.title}}
                                         </a>
                                     </div>
-                                    <div class="row" style="margin-top: 10px;">
+                                    <div class="row" style="margin-top: 10px;" *ngIf="selectedMenu.type === 2">
                                         <div class="col-xs-6 col-sm-6">
                                             <button type="button" class="form-control input-sm" 
                                                 style="background: #4750b6;color: white;"
@@ -95,8 +95,69 @@
                                             </button>
                                         </div>
                                     </div>
-                                    <br>
-                                    <div id="interaction" class="collapse" style="overflow-y: scroll;max-height: 200px;">
+                                    <div class="row" style="margin-top: 10px;" *ngIf="selectedMenu.type === 4">
+                                        <div class="col-xs-12 col-sm-12">
+                                            <button type="button" class="form-control input-sm" 
+                                                style="background: #4750b6;color: white;"
+                                                data-toggle="collapse" data-target="#control">
+                                                Defult Value Pattern
+                                            </button>
+                                        </div>
+                                    </div>
+                                    <div id="control" style="overflow-y: scroll;max-height: 200px;"
+                                        class="collapse">
+                                        <table style="font-size: 12px;margin-top: 5px;"
+                                            class="table table-responsive table table-striped table-bordered table-sm">
+                                            <thead style="text-align: center;">
+                                                <tr>
+                                                    <td>Type</td>
+                                                    <td>
+                                                        Pattern
+                                                    </td>
+                                                    <td>Value</td>
+                                                </tr>
+                                            </thead>
+                                            <tbody style="text-align: center;">
+                                                <tr>
+                                                    <td>Tel</td>
+                                                    <td>xxx-xxx-xxxx</td>
+                                                    <td>333-333-3333</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Week</td>
+                                                    <td>-</td>
+                                                    <td>2024-W07</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Time</td>
+                                                    <td>-</td>
+                                                    <td>06:11:00</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Color</td>
+                                                    <td>-</td>
+                                                    <td>#3497db</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Date</td>
+                                                    <td>-</td>
+                                                    <td>1993-08-06</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Email</td>
+                                                    <td>Email Pattern</td>
+                                                    <td>abc@gmail.com</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Month</td>
+                                                    <td>-</td>
+                                                    <td>1993-08</td>
+                                                </tr>                                               
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                    <div id="interaction" style="overflow-y: scroll;max-height: 200px;margin-top: 5px;"
+                                        class="collapse">
                                         <p>Exmple For Interactions</p>
                                         <ul style="padding-inline-start: 20px;">
                                             <li>'form => form.name && form.name.length > 0'</li>
