--- a/src/app/_component/stt-setting/sttp-ground/sttp-ground.component.html
+++ b/src/app/_component/stt-setting/sttp-ground/sttp-ground.component.html
@@ -59,9 +59,9 @@
 </style>
 <div class="container-fluid">
     <div class="form-group" style="padding-left: 32%;padding-right: 32%;">
-        <select class="form-control input-sm"  
-            id="selectedSTTFId" [(ngModel)]="selectedSTTFId" 
-            name="selectedSTTFId" (change)="onChange()">
+        <select class="form-control input-sm" id="selectedSTTFId"
+            [(ngModel)]="selectedSTTFId" name="selectedSTTFId"
+            (change)="onChange()">
             <option value="">Select Form</option>
             <option *ngFor="let sstForm of sstFormList" [value]="sstForm.sttfId">
                 {{ sstForm.sttfName }}
@@ -69,33 +69,131 @@
         </select>
     </div>
     <!-- form detial -->
-    <div class="panel panel-default" *ngIf="sttfJsonDetail">
-        <div class="panel-heading">{{formDetail.sttfName}}</div>
-        <div class="panel-footer">
-            <div class="row">
-                <div class="col-lg-4 col-sm-4">
-                    <label for="description">Description</label>
-                    <input type="text" id="description" class="form-control input-sm"
-                        value="{{formDetail.description}}" disabled/>
+    <div class="panel panel-default" *ngIf="formJson">
+        <form [formGroup]="dynamicForm" (ngSubmit)="onSubmit()">
+            <div class="panel-heading" id="sttfId-{{formJson.sttfId}}">
+                {{formJson.sttfName}}
+            </div>
+            <hr style="margin-top: 0px;margin-bottom: 0px;">
+            <div class="panel-body">
+                <div class="row">
+                    <div class="col-lg-{{formJson.description.fieldWidth}} col-sm-{{formJson.description.fieldWidth}}">
+                        <label [for]="formJson.description.fieldName">
+                            {{formJson.description.fieldTitle}}
+                        </label>
+                        <input id="{{formJson.description.fieldName}}-{{formJson.description.controlId}}"
+                            [name]="formJson.description.fieldName"
+                            [type]="formJson.description.fieldType"
+                            [formControlName]="formJson.description.fieldName"
+                            [placeholder]="formJson.description.placeHolder"
+                            [attr.disabled]="formJson.description.fieldDisabled"
+                            class="form-control input-sm" />
+                    </div>
+                    <div class="col-lg-{{formJson.homePage.fieldWidth}} col-sm-{{formJson.homePage.fieldWidth}}">
+                        <label [for]="formJson.homePage.fieldName">
+                            {{formJson.homePage.fieldTitle}}
+                        </label>
+                        <input id="{{formJson.homePage.fieldName}}-{{formJson.homePage.controlId}}"
+                            [name]="formJson.homePage.fieldName"
+                            [type]="formJson.homePage.fieldType"
+                            [formControlName]="formJson.homePage.fieldName"
+                            [placeholder]="formJson.homePage.placeHolder"
+                            [attr.disabled]="formJson.homePage.fieldDisabled"
+                            class="form-control input-sm" />
+                    </div>
+                    <div class="col-lg-{{formJson.serviceId.fieldWidth}} col-sm-{{formJson.serviceId.fieldWidth}}">
+                        <label [for]="formJson.serviceId.fieldName">
+                            {{formJson.serviceId.fieldTitle}}
+                        </label>
+                        <input id="{{formJson.serviceId.fieldName}}-{{formJson.serviceId.controlId}}"
+                            [name]="formJson.serviceId.fieldName"
+                            [type]="formJson.serviceId.fieldType"
+                            [formControlName]="formJson.serviceId.fieldName"
+                            [placeholder]="formJson.serviceId.placeHolder"
+                            [attr.disabled]="formJson.serviceId.fieldDisabled"
+                            class="form-control input-sm" />
+                    </div>
                 </div>
-                <div class="col-lg-4 col-sm-4">
-                    <label for="homePage">HomePage</label>
-                    <input type="text" id="homePage" class="form-control input-sm"
-                        value="{{formDetail?.homePage?.lookupValue}}" disabled/>
-                </div>
-                <div class="col-lg-4 col-sm-4">
-                    <label for="serviceId">ServiceId</label>
-                    <input type="text" id="serviceId" class="form-control input-sm" 
-                        value="{{formDetail?.serviceId}}" disabled/>
+                <!-- we have sectoin list so we use same name of sections list define in dynamicForm -->
+                <div class="row" style="margin-top: 10px">
+                    <div class="col-lg-12 col-sm-12">
+                        <div *ngFor="let section of formJson.sections; let i = index"
+                            formGroupName="section-{{section.auSttsId}}" id="section-{{section.auSttsId}}"
+                            class="borderd-content" style="margin-top: 15px">
+                            <div class="title" style="color: #cb0f43;">({{section.sttsName}})</div>
+                            <div formGroupName="fields" class="content" style="margin-top: 10px;height: auto;">
+                                <div class="row">
+                                    <ng-container *ngFor="let field of section.fields; let j = index">
+                                        <div class="col-lg-{{field.fieldWidth}} col-sm-{{field.fieldWidth}}">
+                                            <div class="form-group">
+                                                <label [for]="field.fieldName">
+                                                    {{field.fieldTitle}}
+                                                </label>
+                                                <input *ngIf="field.fieldType !== 'multi-select' && field.fieldType !== 'select' &&
+                                                    field.fieldType !== 'textarea' && field.fieldType !== 'range' 
+                                                    && field.fieldType !== 'radio' && field.fieldType !== 'checkbox'"
+                                                    id="{{field.fieldName}}-{{field.controlId}}"
+                                                    [name]="field.fieldName"
+                                                    [type]="field.fieldType"
+                                                    [formControlName]="field.fieldName"
+                                                    [placeholder]="field?.placeHolder"
+                                                    [attr.disabled]="field.fieldDisabled ? true : null"
+                                                    class="form-control input-sm" />
+                                                <input *ngIf="field.fieldType === 'range'"
+                                                    id="{{field.fieldName}}-{{field.controlId}}"
+                                                    [name]="field.fieldName"
+                                                    [type]="field.fieldType"
+                                                    [formControlName]="field.fieldName"
+                                                    [attr.disabled]="field.fieldDisabled ? true : null" />
+                                                <textarea *ngIf="field.fieldType === 'textarea'"
+                                                    id="{{field.fieldName}}-{{field.controlId}}"
+                                                    [name]="field.fieldName"
+                                                    [formControlName]="field.fieldName"
+                                                    [placeholder]="field?.placeHolder"
+                                                    [attr.disabled]="field.fieldDisabled ? true : null"
+                                                    class="form-control input-sm"></textarea>
+                                                <select *ngIf="field.fieldType === 'multi-select' || field.fieldType === 'select'"
+                                                    id="{{field.fieldName}}-{{field.controlId}}"
+                                                    [name]="field.fieldName"
+                                                    [formControlName]="field.fieldName"
+                                                    [attr.disabled]="field.fieldDisabled ? true : null"
+                                                    [multiple]="field.fieldType === 'multi-select' ? true : false"
+                                                    class="form-control input-sm">
+                                                    <option value="" selected>{{field?.placeHolder}}</option>
+                                                    <option *ngFor="let option of field.options; let x = index"
+                                                        [value]="option.lookupValue">
+                                                        {{ option.description }}
+                                                    </option>
+                                                </select>
+                                                <!-- <ng-container *ngIf="field.fieldType === 'radio' || field.fieldType === 'checkbox'">
+                                                    <div *ngFor="let option of field.options; let y = index" class="radio">
+                                                        <label for="{{field.fieldName}}-{{y}}" class="radio-inline">
+                                                            <input
+                                                                id="{{field.fieldName}}-{{y}}"
+                                                                name="{{field.fieldName}}-{{y}}"
+                                                                formControlName="{{field.fieldName}}"
+                                                                [type]="field.fieldType"
+                                                                [value]="option.lookupValue" 
+                                                                [attr.disabled]="field.fieldDisabled ? true : null"
+                                                                >
+                                                            {{option.description}}
+                                                        </label>
+                                                    </div>
+                                                </ng-container> -->
+                                                <span class="help-block" style="color: red !important;"
+                                                    *ngIf="section && (getSectionFiled('section-' + section.auSttsId, field).invalid 
+                                                    && getSectionFiled('section-' + section.auSttsId, field).touched)">
+                                                    {{ getErrorMessage('section-' + section.auSttsId,  field) }}
+                                                </span>
+                                            </div>
+                                        </div>
+                                    </ng-container>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="panel-body" *ngIf="dynamicForm">
-            <div class="row">
-                <form [formGroup]="dynamicForm" (ngSubmit)="onSubmit()">
-                    <button type="submit">View Json</button>
-                </form>
-            </div>
-        </div>
+        </form>
     </div>
 </div>
